docs/apache-airflow-providers-slack/8.5.1/_sources/_api/airflow/providers/slack/utils/index.rst.txt
:py:mod:`airflow.providers.slack.utils`
=======================================

.. py:module:: airflow.providers.slack.utils


Package Contents
----------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.slack.utils.ConnectionExtraConfig



Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.slack.utils.parse_filename



.. py:class:: ConnectionExtraConfig(conn_type, conn_id = None, extra = None)


   Helper class for rom Connection Extra.

   :param conn_type: Hook connection type.
   :param conn_id: Connection ID uses for appropriate error messages.
   :param extra: Connection extra dictionary.

   .. py:method:: get(field, default = NOTSET)

      Get specified field from Connection Extra.

      :param field: Connection extra field name.
      :param default: If specified then use as default value if field not present in Connection Extra.


   .. py:method:: getint(field, default = NOTSET)

      Get specified field from Connection Extra and evaluate as integer.

      :param field: Connection extra field name.
      :param default: If specified then use as default value if field not present in Connection Extra.



.. py:function:: parse_filename(filename, supported_file_formats, fallback = None)

   Parse filetype and compression from given filename.

   :param filename: filename to parse.
   :param supported_file_formats: list of supported file extensions.
   :param fallback: fallback to given file format.
   :returns: filetype and compression (if specified)


